Added functionality for mobile view

--- a/desktop/projects.html
+++ b/desktop/projects.html
@@ -23,7 +23,7 @@
             <div id="innerPanel">
                 <h1>Projects</h1>
                 <h3>Jackson Flooring Inventory Manager</h3>
-                <img src="images/jfim.jpg" alt="jfim in action" height=450>
+                <img src="../images/jfim.jpg" alt="jfim in action" height=450>
                 <p>
                     The Jackson Flooring Inventory Manager is a simple inventory management system that was programmed by me to 
                     assist a small Flooring retail company by the name of Jackson Flooring in managing their inventory. It's a 
@@ -34,7 +34,7 @@
                 <a href="https://github.com/ajackson2681/Jackson-Flooring-Inventory-Manager">GitHub Repo</a>
 
                 <h3>MTG Card Fetcher for Discord</h3>
-                <img src="images/cardfetcher.jpg" alt="card fetcher bot in action" height = 450>
+                <img src="../images/cardfetcher.jpg" alt="card fetcher bot in action" height = 450>
                 <p>
                     This was a personal project that was mostly just for fun and to play around with the Discord API. My friends and
                     I have a personal Discord chat channel for our Magic: The Gathering group. The bot works by interfacing with the
