Added title to router

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+<!-- This just serves as a router to route traffic to the appropriate web pages -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Router</title>
+    <title>Adam Jackson - Software Engineer</title>
 </head>
 <body>
     <script src="router.js"></script>
