--- a/projects.html
+++ b/projects.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Projects</title>
+    <link rel="stylesheet" type="text/css" href="css/index-mobile.css"></link>
     <link rel="stylesheet" type="text/css" href="css/index.css"></link>
 </head>
 
 <body>
     <div id="content">
         <div id="nav" class="white-background">
-            <h1 class="teal-background">Navigation</h1>
+            <h1 id="nav-header" class="teal-background">Navigation</h1>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Project Highlights</a></li>
@@ -23,7 +24,7 @@
             <div id="innerPanel">
                 <h1>Projects</h1>
                 <h3>Jackson Flooring Inventory Manager</h3>
-                <img src="../images/jfim.jpg" alt="jfim in action" height=450>
+                <img id="jfim" src="images/jfim.jpg" alt="jfim in action">
                 <p>
                     The Jackson Flooring Inventory Manager is a simple inventory management system that was programmed by me to 
                     assist a small Flooring retail company by the name of Jackson Flooring in managing their inventory. It's a 
@@ -34,7 +35,7 @@
                 <a href="https://github.com/ajackson2681/Jackson-Flooring-Inventory-Manager">GitHub Repo</a>
 
                 <h3>MTG Card Fetcher for Discord</h3>
-                <img src="../images/cardfetcher.jpg" alt="card fetcher bot in action" height = 450>
+                <img id="cardfetcher" src="images/cardfetcher.jpg" alt="card fetcher bot in action">
                 <p>
                     This was a personal project that was mostly just for fun and to play around with the Discord API. My friends and
                     I have a personal Discord chat channel for our Magic: The Gathering group. The bot works by interfacing with the
@@ -54,4 +55,6 @@
             </div>
         </div>
     </div>
+
+    <script src="formatter.js"></script>
 </body>
