Updated source to be simpler and use media queries

--- a/index.html
+++ b/index.html
@@ -2,33 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home</title>
-    <link rel="stylesheet" type="text/css" href="css/index-mobile.css"></link>
-    <link rel="stylesheet" type="text/css" href="css/index.css"></link>
+    <link rel="stylesheet" type="text/css" href="index.css"></link>
 </head>
-
 <body>
-    <div id="content">
-        <div id="nav" class="white-background">
-            <h1 id="nav-header" class="teal-background">Navigation</h1>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="projects.html">Project Highlights</a></li>
-                <li><a href="https://github.com/ajackson2681">GitHub Page</a></li>
-            </ul>
-        </div>
+    <header>
+        <h1>Adam Jackson</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="projects.html">Projects</a>
+            <a href="https://bitbucket.org/ajackson2681">BitBucket</a>
+        </nav>
+    </header>
 
-        <div id="panel" class="white-background">
-            <div id="innerPanel">
-                <h1>About Me</h1>
+    <main>
+        <article>
+            <h1>About Me</h1>
+            <article>
                 <h3>Where I'm From</h3>
                 <p>
                     I grew up in Poynette, Wisconsin, a very small town of about 2,500 people located just North of Madison on Highway 51. I attended 
                     all 12 years of my primary education at the Poynette School District and graduated in 2015. The town is mostly known for the
                     MacKenzie Center wildlife preserve. 
                 </p>
+            </article>
+
+            <article>
                 <h3>Education</h3>
                 <p>
                     I graduated High School from the Poynette School district in 2015, and it's where I learned of my love for Computer Science. 
@@ -37,6 +38,9 @@
                     fall of 2018, I have been attending the University of Wisconsin -- Madison, with a currently estimated graduation time of 
                     December 2020.
                 </p>
+            </article>
+
+            <article>
                 <h3>Experience</h3>
                 <p>
                     I am currently interning for Genus IntelliGen Technologies, which produces Sexcel for ABS Global. I am developing skills
@@ -47,6 +51,9 @@
                     my education I have gained some entry-level experience with C. Although not a formal programming language, I also have experience
                     with BASH scripting, and have created many utilities that assist me in my day-to-day work.
                 </p>
+            </article>
+
+            <article>
                 <h3>Fields of Study I'm Interested In</h3>
                 <p>
                     I have an interest in Computer Graphics, Software Engineering, and Networking. I enjoy
@@ -54,14 +61,15 @@
                     college (and a few failed attempts at writing my own games), I have begun to develop a fondness for business 
                     applications of programming, and working towards the betterment society.
                 </p>
+            </article>
+
+            <article>
                 <h3>Contact Inforamtion</h3>
                 <p>
                     If you would like to contact me to get my resume or other information, you can contact me at ajackson2681@gmail.com.
                 </p> 
-            </div>
-        </div>
-    </div>
-    
-    <script src="formatter.js"></script>
+            </article>
+        </article>
+    </main>
 </body>
 </html>
