--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
                     One disadvantage to this method was that Java does not handle REST APIs as nicely as JavaScript/TypeScript does. So
                     due to my lack of experience with REST APIs, I relied on a <a href="https://github.com/ForOhForError/ScryfallAPIBinding">third-party one</a> 
                     for interfacing with Scryfall.com. I no longer am putting any work into the Java bot, and as such, any glaring bugs that
-                    exist will likely never be addressed. For those interested, the bot can be found <a href="https://github.com/ajackson2681/Card-Fetcher">here</a>.
+                    exist will likely never be addressed. For those interested, the bot can be found <a href="https://bitbucket.org/ajackson2681/Card-Fetcher">here</a>.
                 </p>
                 <a href="https://bitbucket.org/ajackson2681/cardfetcher-ts/src/master/">BitBucket Repo</a>
             </article>
