Updating website details

--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Adam Jackson</h1>
         <nav>
-            <a href="index.html">Home</a>
+            <a href="index.html">About Me</a>
             <a href="projects.html">Projects</a>
             <a href="https://bitbucket.org/ajackson2681">BitBucket</a>
         </nav>
@@ -29,6 +29,12 @@
                     specialized sytem that is specific to that retailer but can be easily modified for more general use. The idea
                     behind this project was that most other inventory systems are too expensive and had many features that the 
                     retailer would not utilize. The entire program is written in Java, using the JavaFX UI library. 
+                    <br><br>
+                    There are many mistakes I have come to realize that I made while developing this application. First and 
+                    foremost, utilizing an ArrayList as a data structure to hold the products was a poor decision. Second, I 
+                    built the entire UI in code, and didn't make use of FXML. This was due to the fact that when I first 
+                    developed this application, I had no experience using FXML. If I were to re-design this, I would likely 
+                    use something like an SQLite database to hold the product information, and I would utilize FXML.
                 </p>
                 <a href="https://bitbucket.org/ajackson2681/jackson-flooring-inventory-manager/src/master/">BitBucket Repo</a>
             </article>
