--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>About Me</title>
     <link rel="stylesheet" type="text/css" href="index.css"></link>
 </head>
 <body>
     <header>
         <h1>Adam Jackson</h1>
         <nav>
-            <a href="index.html">Home</a>
+            <a href="index.html">About Me</a>
             <a href="projects.html">Projects</a>
             <a href="https://bitbucket.org/ajackson2681">BitBucket</a>
         </nav>
@@ -34,32 +34,29 @@
                 <p>
                     I graduated High School from the Poynette School district in 2015, and it's where I learned of my love for Computer Science. 
                     For the first 3 years of college, I attended Madison College (also known as MATC) for their transfer program, and completed
-                    most of my general education requirements. I finished up my time at Madison College in the spring of 2018. Starting in the 
-                    fall of 2018, I have been attending the University of Wisconsin -- Madison, with a currently estimated graduation time of 
-                    December 2020.
+                    most of my general education requirements. I finished up my time at Madison College in the spring of 2018. From fall 2018 
+                    until December 2020, I attended the University of Wisconsin -- Madison for Computer Science, with a minor in Mathematics.
                 </p>
             </article>
 
             <article>
                 <h3>Experience</h3>
                 <p>
-                    I am currently interning for Genus IntelliGen Technologies, which produces Sexcel for ABS Global. I am developing skills
-                    working with TypeScript and Angular applications, as well as Node.js and C++ addons for Node. In addition to my formal work 
-                    experience, I have completed a few personal projects, which are detailed further on my 'Projects' page, and from them have 
-                    gained a reasonable amount of experience in the Java and JavaScript programming languages. From various necessities in 
-                    work and for personal projects, I have also gained some experience in Python, but I am by no means fluent in it. Through 
-                    my education I have gained some entry-level experience with C. Although not a formal programming language, I also have experience
-                    with BASH scripting, and have created many utilities that assist me in my day-to-day work.
+                    I am currently working for Genus IntelliGen Technologies, who produces Sexcel, which is sex-skewed bovine genetics,
+                    for ABS Global. My primary duties include the development of Angular applications via TypeScript and Node.js, as well
+                    as add-ons for Node using C++. I also assist with the development and maintenance of embedded systems utilizing C and C++.
+                    For various day-to-day applications, I have gained experience using Python and BASH to write scripts to assist me. In
+                    addition to my work experience, I have also completed a few personal projects, which are further detailed on the 'Projects'
+                    page.
                 </p>
             </article>
 
             <article>
                 <h3>Fields of Study I'm Interested In</h3>
                 <p>
-                    I have an interest in Computer Graphics, Software Engineering, and Networking. I enjoy
-                    solving tough issues, and learning new concepts. My dream was always to be a game developer, but through
-                    college (and a few failed attempts at writing my own games), I have begun to develop a fondness for business 
-                    applications of programming, and working towards the betterment society.
+                    My primary areas of interest are computer graphics, automation, embedded systems, and networks. I enjoy solving tough 
+                    issues and learning new concepts. I originally had an interest in game development, but have since discovered a
+                    fondness for the development of more practical applications that contribute to a more sustainable future.
                 </p>
             </article>
 
