Adding electron timer projec to the projects page.
Includes images.

--- a/projects.html
+++ b/projects.html
@@ -59,6 +59,29 @@
                 </p>
                 <a href="https://bitbucket.org/ajackson2681/cardfetcher-ts/src/master/">BitBucket Repo</a>
             </article>
+
+            <article>
+                <h3>Electron Speedrun Timer</h3>
+                <div class="flex-row">
+                    <img id="timer" src="images/timer-reset.jpg" alt="electron timer for speedruns">
+                    <img id="timer" src="images/timer-running.jpg" alt="electron timer for speedruns">
+                </div>
+                <div class="flex-center">
+                    <img id="timer" src="images/timer-paused.jpg" alt="electron timer for speedruns">
+                </div>
+                <p>
+                    This project was conceived when I was attempting to learn how to speedrun Minecraft while playing on Linux. Unfortunately,
+                    there didn't seem to be any good speedrun timers on Linux. This is just a simple timer that can be started, paused, and
+                    re-started. Furthermore, the style can be customized, including font, font color during each of the states, and background
+                    for chroma-keying in recording software such as OBS. All the styling options are outlined on the BitBucket README page. 
+                    Although Electron is a cross-playform UI framework, this application only has pre-built images and installers for the Linux 
+                    operating system (as of writing this). This was due to some difficulties with getting electron-builder-windows working on 
+                    Linux (and thus, BitBucket pipelines). The application runs just fine on Windows, but will need to be built from source.
+                    This project also has an example of utilizing bitbucket pipelines to automate the build process and post the results to the
+                    downloads page of the repository.
+                </p>
+                <a href="https://bitbucket.org/ajackson2681/electron-timer/src/master/">BitBucket Repo</a>
+            </article>
         </article>
     </main>
 </body>
