Adds a playable snake game to the projects page.

--- a/projects.html
+++ b/projects.html
@@ -82,6 +82,19 @@
                 </p>
                 <a href="https://bitbucket.org/ajackson2681/electron-timer/src/master/">BitBucket Repo</a>
             </article>
+
+            <article>
+                <h3>Browser Snake</h3>
+                <img id="snake" src="images/snake.jpg" alt="snake game in browser">
+                <p>
+                    For this one I just got bored one night and wanted to try and make a game in the browser. I had worked with HTML canvases a
+                    little bit in school, but never did any personal projects using them. This is just a simple implementation of the game snake.
+                    Since it's just a single script file, I'll have the source embedded on this page rather than linking to a repository.
+                </p>
+                <a href="snake.js">Source</a>
+                <br>
+                <a href="snake.html">Play it!</a>
+            </article>
         </article>
     </main>
 </body>
