Updating website with new projects

--- a/projects.html
+++ b/projects.html
@@ -21,22 +21,18 @@
         <article>
             <h1>Projects</h1>
             <article>
-                <h3>Jackson Flooring Inventory Manager</h3>
-                <img id="jfim" src="images/jfim.jpg" alt="jfim in action">
+                <h3>Dungeon Master Tools</h3>
+                <img id="jfim" src="images/dmtools.jpg" alt="dmtools in action">
                 <p>
-                    The Jackson Flooring Inventory Manager is a simple inventory management system that was programmed by me to 
-                    assist a small Flooring retail company by the name of Jackson Flooring in managing their inventory. It's a 
-                    specialized sytem that is specific to that retailer but can be easily modified for more general use. The idea
-                    behind this project was that most other inventory systems are too expensive and had many features that the 
-                    retailer would not utilize. The entire program is written in Java, using the JavaFX UI library. 
-                    <br><br>
-                    There are many mistakes I have come to realize that I made while developing this application. First and 
-                    foremost, utilizing an ArrayList as a data structure to hold the products was a poor decision. Second, I 
-                    built the entire UI in code, and didn't make use of FXML. This was due to the fact that when I first 
-                    developed this application, I had no experience using FXML. If I were to re-design this, I would likely 
-                    use something like an SQLite database to hold the product information, and I would utilize FXML.
+                    This is an application written in Java, with the JavaFX framework. It is a tool that is meant to help 
+                    dungeon masters run a game of Dungeons & Dragons (or other D20-baesd game) more easily. It has a monster 
+                    lookup that interfaces with an sqlite database (that you can create yourself from scratch, following the
+                    provided schema, or utilize the provided one that only contains information from the SRD). It also has 
+                    a dice roller, an encounter builder that you can build from scratch using the monster database or by 
+                    manual input, and then you can save/load these encounters later, and a notes section. It also saves your 
+                    data between uses, so that you don't have to re-enter information.
                 </p>
-                <a href="https://bitbucket.org/ajackson2681/jackson-flooring-inventory-manager/src/master/">BitBucket Repo</a>
+                <a href="https://bitbucket.org/ajackson2681/dmtools/src/master/">BitBucket Repo</a>
             </article>
 
             <article>
