Retrieves repo variable for version dynamically
This allows the latest version of the dmtool to be displayed with the
entry on the projects page

--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
             <h1>Projects</h1>
             <article>
                 <h3>Dungeon Master Tools</h3>
-                <img id="jfim" src="images/dmtools.jpg" alt="dmtools in action">
+                <img id="dmtools" src="images/dmtools.jpg" alt="dmtools in action">
                 <p>
                     This is an application written in Java, with the JavaFX framework. It is a tool that is meant to help 
                     dungeon masters run a game of Dungeons & Dragons (or other D20-baesd game) more easily. It has a monster 
@@ -33,6 +33,8 @@
                     data between uses, so that you don't have to re-enter information.
                 </p>
                 <a href="https://bitbucket.org/ajackson2681/dmtools/src/master/">BitBucket Repo</a>
+                <br>
+                <a href="https://bitbucket.org/ajackson2681/downloads/dmtools-latest.zip">Download the latest version <span id="version"></span> here!</a>
             </article>
 
             <article>
@@ -92,6 +94,8 @@
                 <a href="snake.html">Play it!</a>
             </article>
         </article>
+
+        <script src="projects.js"></script>
     </main>
 </body>
 </html>
