Changed location of the version string

--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
                 </p>
                 <a href="https://bitbucket.org/ajackson2681/dmtools/src/master/">BitBucket Repo</a>
                 <br>
-                <a href="https://bitbucket.org/ajackson2681/downloads/dmtools-latest.zip">Download the latest version <span id="version"></span> here!</a>
+                <a href="https://bitbucket.org/ajackson2681/downloads/dmtools-latest.zip" id="version">Download the latest version here!</a>
             </article>
 
             <article>
