Makes images open in a new tab if you click on them

--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,9 @@
             <h1>Projects</h1>
             <article>
                 <h3>Dungeon Master Tools</h3>
-                <img id="dmtools" src="images/dmtools.jpg" alt="dmtools in action">
+                <a href="images/dmtools.jpg" target="_blank" rel="noopener noreferrer">
+                    <img id="dmtools" src="images/dmtools.jpg" alt="dmtools in action">
+                </a>
                 <p>
                     This is an application written in Java, with the JavaFX framework. It is a tool that is meant to help 
                     dungeon masters run a game of Dungeons & Dragons (or other D20-baesd game) more easily. It has a monster 
@@ -39,7 +41,9 @@
 
             <article>
                 <h3>MTG Card Fetcher for Discord</h3>
-                <img id="cardfetcher" src="images/cardfetcher.jpg" alt="card fetcher bot in action">
+                <a href="images/cardfetcher.jpg" target="_blank" rel="noopener noreferrer">
+                    <img id="cardfetcher" src="images/cardfetcher.jpg" alt="card fetcher bot in action">
+                </a>
                 <p>
                     This was a personal project that was mostly just for fun and to play around with the Discord API. My friends and
                     I have a personal Discord chat channel for our Magic: The Gathering group. The bot works by interfacing with the
@@ -61,11 +65,18 @@
             <article>
                 <h3>Electron Speedrun Timer</h3>
                 <div class="flex-row">
-                    <img id="timer" src="images/timer-reset.jpg" alt="electron timer for speedruns">
-                    <img id="timer" src="images/timer-running.jpg" alt="electron timer for speedruns">
+                    
+                    <a href="images/timer-reset.jpg" target="_blank" rel="noopener noreferrer">
+                        <img id="timer" src="images/timer-reset.jpg" alt="electron timer for speedruns">
+                    </a>
+                    <a href="images/timer-running.jpg" target="_blank" rel="noopener noreferrer">
+                        <img id="timer" src="images/timer-running.jpg" alt="electron timer for speedruns">
+                    </a>
                 </div>
                 <div class="flex-center">
-                    <img id="timer" src="images/timer-paused.jpg" alt="electron timer for speedruns">
+                    <a href="images/timer-paused.jpg" target="_blank" rel="noopener noreferrer">
+                        <img id="timer" src="images/timer-paused.jpg" alt="electron timer for speedruns">
+                    </a>
                 </div>
                 <p>
                     This project was conceived when I was attempting to learn how to speedrun Minecraft while playing on Linux. Unfortunately,
@@ -83,7 +94,9 @@
 
             <article>
                 <h3>Browser Snake</h3>
-                <img id="snake" src="images/snake.jpg" alt="snake game in browser">
+                <a href="images/snake.jpg" target="_blank" rel="noopener noreferrer">
+                    <img id="snake" src="images/snake.jpg" alt="snake game in browser">
+                </a>
                 <p>
                     For this one I just got bored one night and wanted to try and make a game in the browser. I had worked with HTML canvases a
                     little bit in school, but never did any personal projects using them. This is just a simple implementation of the game snake.
