Add new image for dmtools
Also fixes the layout for the time

--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
             <h1>Projects</h1>
             <article>
                 <h3>Dungeon Master Tools</h3>
-                <a href="images/dmtools.jpg" target="_blank" rel="noopener noreferrer">
+                <a href="images/dmtools2.jpg" target="_blank" rel="noopener noreferrer">
                     <img id="dmtools" src="images/dmtools.jpg" alt="dmtools in action">
                 </a>
                 <p>
@@ -64,20 +64,15 @@
 
             <article>
                 <h3>Electron Speedrun Timer</h3>
-                <div class="flex-row">
-                    
-                    <a href="images/timer-reset.jpg" target="_blank" rel="noopener noreferrer">
-                        <img id="timer" src="images/timer-reset.jpg" alt="electron timer for speedruns">
-                    </a>
-                    <a href="images/timer-running.jpg" target="_blank" rel="noopener noreferrer">
-                        <img id="timer" src="images/timer-running.jpg" alt="electron timer for speedruns">
-                    </a>
-                </div>
-                <div class="flex-center">
-                    <a href="images/timer-paused.jpg" target="_blank" rel="noopener noreferrer">
-                        <img id="timer" src="images/timer-paused.jpg" alt="electron timer for speedruns">
-                    </a>
-                </div>
+                <a href="images/timer-reset.jpg" target="_blank" rel="noopener noreferrer">
+                    <img id="timer" src="images/timer-reset.jpg" alt="electron timer for speedruns">
+                </a>
+                <a href="images/timer-running.jpg" target="_blank" rel="noopener noreferrer">
+                    <img id="timer" src="images/timer-running.jpg" alt="electron timer for speedruns">
+                </a>
+                <a href="images/timer-paused.jpg" target="_blank" rel="noopener noreferrer">
+                    <img id="timer" src="images/timer-paused.jpg" alt="electron timer for speedruns">
+                </a>
                 <p>
                     This project was conceived when I was attempting to learn how to speedrun Minecraft while playing on Linux. Unfortunately,
                     there didn't seem to be any good speedrun timers on Linux. This is just a simple timer that can be started, paused, and
