Fix link for dmtools image

--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
             <article>
                 <h3>Dungeon Master Tools</h3>
                 <a href="images/dmtools2.jpg" target="_blank" rel="noopener noreferrer">
-                    <img id="dmtools" src="images/dmtools.jpg" alt="dmtools in action">
+                    <img id="dmtools" src="images/dmtools2.jpg" alt="dmtools in action">
                 </a>
                 <p>
                     This is an application written in Java, with the JavaFX framework. It is a tool that is meant to help 
