Update website layout

--- a/index.html
+++ b/index.html
@@ -21,50 +21,35 @@
         <article>
             <h1>About Me</h1>
             <article>
-                <h3>Where I'm From</h3>
                 <p>
                     I grew up in Poynette, Wisconsin, a very small town of about 2,500 people located just North of Madison on Highway 51. I attended 
                     all 12 years of my primary education at the Poynette School District and graduated in 2015. The town is mostly known for the
-                    MacKenzie Center wildlife preserve. 
+                    MacKenzie Center. 
                 </p>
-            </article>
-
-            <article>
-                <h3>Education</h3>
                 <p>
                     I graduated High School from the Poynette School district in 2015, and it's where I learned of my love for Computer Science. 
                     For the first 3 years of college, I attended Madison College (also known as MATC) for their transfer program, and completed
                     most of my general education requirements. I finished up my time at Madison College in the spring of 2018. From fall 2018 
                     until December 2020, I attended the University of Wisconsin -- Madison for Computer Science, with a minor in Mathematics.
                 </p>
-            </article>
-
-            <article>
-                <h3>Experience</h3>
                 <p>
-                    I am currently working for Genus IntelliGen Technologies, who produces Sexcel, which is sex-skewed bovine genetics,
-                    for ABS Global. My primary duties include the development of Angular applications via TypeScript and Node.js, as well
-                    as add-ons for Node using C++. I also assist with the development and maintenance of embedded systems utilizing C and C++.
-                    For various day-to-day applications, I have gained experience using Python and BASH to write scripts to assist me. In
-                    addition to my work experience, I have also completed a few personal projects, which are further detailed on the 'Projects'
-                    page.
+                    I am currently a senior software engineer for Genus PLC Research & Development. I work in the Biosystems Engineering department,
+                    which develops sexing instrumentation for bovine genetics. My primary expertise is in embedded systems development and
+                    peripheral device integration. Through my time here, I have developed a strong foundation in C and C++, but am also quite
+                    comfortable with Python, JavaScript/TypeScript, and Java. I work almost exclusively in the Linux Operating System, so I
+                    also have extensive experience writing shell scripts.
+                </p>
+                <p>
+                    My primary area of interest is in embedded systems; I love working on devices that interact with the physical world.
                 </p>
             </article>
 
             <article>
-                <h3>Fields of Study I'm Interested In</h3>
-                <p>
-                    My primary areas of interest are computer graphics, automation, embedded systems, and networks. I enjoy solving tough 
-                    issues and learning new concepts. I originally had an interest in game development, but have since discovered a
-                    fondness for the development of more practical applications that contribute to a more sustainable future.
-                </p>
-            </article>
-
-            <article>
-                <h3>Contact Inforamtion</h3>
-                <p>
-                    If you would like to contact me to get my resume or other information, you can contact me at ajackson2681@gmail.com.
-                </p> 
+                <h1>Contact Inforamation</h1>
+                <div class="flex-column">
+                    <a href="https://www.linkedin.com/in/adam-jackson-6a9156215/">LinkedIn</a>
+                    <a href="mailto:contact@adamjackson.dev">E-Mail</a> 
+                </div>
             </article>
         </article>
     </main>
