Different stylesheets and toggleable theme

--- a/projects.html
+++ b/projects.html
@@ -102,8 +102,12 @@
                 <a href="snake.html">Play it!</a>
             </article>
         </article>
-
-        <script src="projects.js"></script>
+    
+        <footer>
+            <a onclick="setColor()" href="">Switch Theme</a>
+        </footer>
+    
+        <script src="projects.js"></script>    
     </main>
 </body>
 </html>
