--- a/index.html
+++ b/index.html
@@ -54,5 +54,11 @@
             </article>
         </article>
     </main>
+    
+    <footer>
+        <a onclick="setColor()" href="">Switch Theme</a>
+    </footer>
+
+    <script src="index.js"></script>
 </body>
 </html>
